--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id ="web">
+      <div id="phones">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div id="presentation">
+        <header>
+          <div>
+            <img id="logo" src="./images/brand.png" alt="instagram logo">
+          </div>
+          <div id ="home-button">
+            <img src="./images/home.png" alt="home">
+            <a href="#">Log in</a>
+          </div>
+        </header>
+
+        <section id="description">
+          <article>
+            <h1>Capture and Share<br/> the World's Moments</h1>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>
+          </article>
+          <div id ="badges">
+            <a href="#"><img src="./images/badge-iphone.png" alt="app store"></a>
+            <a href="#"><img src="./images/badge-android.png" alt="google play"></a>
+          </div>
+        </section>
+      </div>
+    </div>
+    
+    <nav id=footer>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <span>&copy; 2014 Instagram</span>
+    </nav>      
   </body>
 </html>
