--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-content">
+      <img src="images/phones.png" alt="phone image">
+      <div class="right-content">
+        <div class="upper-right-content">
+          <img src="images/brand.png" alt="instagram logo">
+          
+          <button type="button">
+            <img src="images/home.png" alt="home icon">
+            <span>Log in</span>
+          </button>
+        </div>
+        <div class="description-box">
+          <h1>
+            Capture and Share<br> the World's Moments
+          </h1>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="mobile-buttons">
+            <img src="images/badge-iphone.png" alt="badge iphone">
+            <img src="images/badge-android.png" alt="badge android">
+          </div>
+        </div>
+      </div>
+    </div>    
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
