--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body class="d-flex flex-align-start lex-justify-start">
+    <main class="container">
+        <section class="d-flex  pt-80 pb-60">
+            <div class="mr-30">
+                <img src="./images/phones.png" alt="Image with two iPhones showing the demo of the Instagram App" class="img-iphones-app ">
+            </div>
+            <article class="ml-30">
+                <header>
+                    <ul class="d-flex navbar">
+                        <li>
+                            <img src="./images/brand.png" alt="Instagram logotype">
+                        </li>
+                        <li>
+                            <a href="#0" class="btn btn-login btn-icon"><img src="./images/home.png" alt="Icon Home">Log in</a>
+                        </li>
+                    </ul>
+                </header>
+                <div class="card-border-shadow bg-white pt-30 pl-40 pr-40 pb-0 mb-20">
+                    <h1 class="mt-0">Capture and Share <br> the World's Moments</h1>
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p class="mb-30">Oh yeah, did we mention it's free?</p>
+                    <ul class="download-stores d-flex flex-align-start flex-justify-start">
+                        <li>
+                            <a href="#0" class="pr-20">
+                                <img src="./images/badge-iphone.png" alt="Download on the App Store">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#0">
+                                <img src="./images/badge-android.png" alt="Get it on Google Play">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+        <nav class="container mb-40">
+            <ul class="d-flex flex-content-center footer-navigation">
+                <li><a href="#0">About Us</a></li>
+                <li><a href="#0">Support</a></li>
+                <li><a href="#0">Blog</a></li>
+                <li><a href="#0">Press</a></li>
+                <li><a href="#0">API</a></li>
+                <li><a href="#0">Jobs</a></li>
+                <li><a href="#0">Privacy</a></li>
+                <li><a href="#0">Terms</a></li>
+                <li>&copy; 2014 Instagram</li>
+            </ul>
+        </nav>
+    </main>
+</body>
+
 </html>
