Some problems with the text-box design. Working on improvments.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel = "stylesheet" href = "./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id = "body-container">
+     <div id = "container">
+      <div class = "phone-image">
+        <img src = "./images/phones.png" alt = "phone image" />
+      </div>
+      <div class = "right-section">
+        <div class = "top-section">
+          <img src = "./images/brand.png" alt = "Brand logo" />
+          <button type="button">
+            <img src = "./images/home.png" alt = "home" /> <span><strong>Log In</strong></span>
+          </button>
+        </div>
+          <div class = "text-box">
+            <h2>Capture and Share <br/> the World's Moments</h2>
+            <p>Instagram  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+              
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class = "download-box">
+              <img class = "apple" src = "./images/badge-iphone.png" alt = "download for IOS" />
+              <img src = "./images/badge-android.png" alt = "download for android" />
+            </div>
+          </div>
+        </div>     
+     </div>
+    <footer>
+      <ul>
+        <li>About Us</a></li>
+        <li>Support</a></li>
+        <li>Blog</a></li>
+        <li>Press</a></li>
+        <li>API</a></li>
+        <li>Jobs</a></li>
+        <li>Privacy</a></li>
+        <li>Terms</a></li>
+        <li style="color: darkgrey" >&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+    </div>
   </body>
 </html>
+
+
