--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div class="page">
+    <div id="home-bg">
+           <section class="disposicion" >
+             <div class="home-phones">
+               <img src="./images/phones.png" alt="android phone" >
+             </div>
+             <div class="content">
+               <headDiv class="display">
+                 <img src="./images/brand.png" alt="logo instagram" >
+                 <div class="container">
+                 <img src="./images/home.png" alt="casita"> Log in
+                 </div>
+               </headDiv>
+               <cajita class="caja" id="structure">
+                <h1>Capture and Share <br>the World's Moments</h1>  <br>
+        
+                <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br>with
+                 friends and family.</p>
+                 <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+                 &mdash; it's that easy. You can <br>even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.</p>
+      
+                 <p>Oh yeah, did we mention it's free? </p> 
+                <div class="apps">
+                 <img src="./images/badge-iphone.png" alt="descarga en App Store">  
+                 <img src="images/badge-android.png" alt="descarga en android">
+                </div>
+               </cajita>
+             </div>
+           </section>
+    </div>
+  </div>
+
+    <footer> 
+      <div class="div-footer">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul> 
+    </div>
+    </footer>
   </body>
 </html>
