--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel=stylesheet href="styles/style.css">
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    
+    <section id="main">
+    <div class=image>
+    <img src= 'images/phones.png'>
+    </div>
+  
+    <section id="info">
+    <header>
+       <img src='images/brand.png'>
+       <div id ='home'>
+      <div>
+       <img  src='images/home.png'>
+      </div>
+       Log in
+      </div>
+    </header>
+    <div id="text">
+    <h1>
+      Capture and Share the World's Moments
+    </h1>  
+    <p>
+    Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.
+    </p>
+    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    </p>
+    <p>
+    Oh yeah, did we mention it's free?
+    </p>
+     <img src='images/badge-iphone.png'>
+     <img src='images/badge-android.png'>
+    </div>
+    </section>
+  </section>
+
+    <section id="footer">
+    <div class="link">About Us</div> 
+    <div class="link">Support</div> 
+    <div class="link">Blog</div> 
+    <div class="link">Press </div>
+    <div class="link">API</div>
+    <div class="link">Jobs</div>
+    <div class="link"> Privacy</div> 
+    <div class="link">Terms</div> 
+    <div>&copy; 2014 Instagram</div>
+  </section>
+  <div id="blue"></div>
   </body>
 </html>
