--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <div class="phones">
+        <img src="./images/phones.png" alt="phones" class="telephone">
+      </div>
+      
+      <div class="main">
+        <header class="inst-header">
+          <img src="./images/brand.png" alt="Instagram Logo" class="logo">
+        <button type="button" class="login">Log in</section>
+        </header>
+        
+        <div class="text">
+          <h2> Capture and Share the World's Moments </h2>
+          <p>
+        Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.<br> <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+        <br>Oh yeah, did we mention it's free?
+          </p>
+          <section class="pictures">
+            <img src="./images/badge-iphone.png" alt="Download on the App Store img">
+            <img src="./images/badge-android.png" alt="Get it on Google Play ">
+          </section>
+        </div>
+      </div>
+
+    </div>
+  <footer>About Us Support Blog Press API
+    Jobs Privacy Terms &copy; 2014 Instagram</footer>
+  </div>
   </body>
 </html>
