--- a/index.html
+++ b/index.html
@@ -4,34 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+
     <!-- don't forget to link your styles -->
   </head>
   <body>
-
     <header class="main-header container">
-        <div class="title">
-          <img class="logo" src="./images/brand.png" alt="Instagram logo">
-        </div>
-        <nav class="nav-bar">
-            <img src="./images/home.png" alt="Home icon" class="nav-home">
-            <span>Log in</span>
-          </nav>
+      <div class="title">
+        <img class="logo" src="./images/brand.png" alt="Instagram logo" />
+      </div>
+      <nav class="nav-bar">
+        <img src="./images/home.png" alt="Home icon" class="nav-home" />
+        <span>Log in</span>
+      </nav>
     </header>
 
     <section class="hero container">
       <div class="mobile-img">
-        <img src="./images/phones.png" alt="Two mobile phones">
+        <img src="./images/phones.png" alt="Two mobile phones" />
+      </div>
+
+      <div class="hero-text card">
+        <div class="card-container">
+          <h1>
+            Capture and Share <br />
+            the World's Moments
+          </h1>
+          <br />
+          <p class="text">
+            Instagram is a fast, beautiful and fun way to share your life<br />
+            with friends and family.
+          </p>
+          <p class="text">
+            Take a picture or video, choose a filter to transform its look<br />
+            and feel, then post to Instagram &mdash; it's that easy. You can
+            <br />
+            even share to Facebook, Twitter, Tumblr and more. It's <br />
+            a new way to see the world.
+          </p>
+          <p class="text">Oh yeah, did we mention it's free?</p>
+        </div>
       </div>
     </section>
 
-
     <!--
-      Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+       
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
     -->
