feat: Solve problems with flexbox and absolute positioned hero

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       </nav>
     </header>
 
-    <section class="hero container">
+    <section class="hero container overlayed-item">
       <div class="mobile-img">
         <img src="./images/phones.png" alt="Two mobile phones" />
       </div>
 
-      <div class="hero-text card">
+      <div class="card">
         <div class="card-container">
           <h1>
             Capture and Share <br />
@@ -47,7 +47,6 @@
         </div>
       </div>
     </section>
-
     <!--
        
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
