feat: App store and android store badges

--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
             a new way to see the world.
           </p>
           <p class="text">Oh yeah, did we mention it's free?</p>
+
+          <div class="stores">
+            <img src="./images/badge-iphone.png" alt="">
+             <img src="./images/badge-android.png" alt="">
+          </div>
         </div>
       </div>
     </section>
     <!--
        
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+   Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
     -->
   </body>
