--- a/index.html
+++ b/index.html
@@ -46,12 +46,26 @@
           <p class="text">Oh yeah, did we mention it's free?</p>
 
           <div class="stores">
-            <img src="./images/badge-iphone.png" alt="">
-             <img src="./images/badge-android.png" alt="">
+            <img src="./images/badge-iphone.png" alt="" />
+            <img src="./images/badge-android.png" alt="" />
           </div>
         </div>
       </div>
     </section>
+
+    <footer class="footer footer-container">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Press</li>
+        <li>Api</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copyright ">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
+
     <!--
        
    Download on the App Store Get it on Google Play About Us Support Blog Press API
