--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="./styles/style.css" rel="stylesheet">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    
+    <main class="container">
+      <div>
+        <div>
+          <img class="img-phones" src="./images/phones.png" alt="photo ipad">
+        </div>
+        
+        <div id="information">
+          <div id="log-in">
+            <div>
+              <img class="img-brand" src="./images/brand.png" alt="photo Logo Instagram">
+            </div>
+            <div id="button">
+              <a href="#"></a><img src="./images/home.png" alt="x" />Log in</a>
+            </div>
+          </div>
+  
+          <div id="main-text">
+            <h2>Capture and Share the World's Moments </h2> 
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and familybr.<br> <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+             <br> <br>Oh yeah, did we mention it's free?
+            </p>
+            <ul id="download-stores">
+              <li><a href="#"><img class="img-bandage-iphone" src="./images/badge-iphone.png" alt="photo download Iphone"></a></li>
+              <li><a href=""><img class="img-bandage-android" src="./images/badge-android.png" alt="photo download Android"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <span class="copy-left">©2014 Instagram</span>
+    </footer>
   </body>
 </html>
