--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram -->
-    
+    <main>
       <div class="main-container">
         <div class="container">
           <div class="telephone">
