done borrar el anterior

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <section class="container-right">
-      <div>#1c5380
+      <div>
         <img src="./images/brand.png" alt="logo">
 
         <div class="button"> <a href=""><img src="./images/home.png" alt="home"></a>
