--- a/index.html
+++ b/index.html
@@ -1,16 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <main>
+
+    <!-- first div-->
+    <div class="flex">
+      <!--- SECTION 1-->
+      <section class="section-left">
+        <img src="images/phones.png" alt="Iphones">
+      </section>
+
+      <!--- SECTION 2-->
+      <section class="section-right">
+
+        <!--div one section 2 logo-->
+        <div class="Logo">
+          <img src="images/brand.png" alt="Logo Instagram">
+          <a href=""><img src="images/home.png" alt="">Log In</a>
+        </div>
+
+        <!--div two section 2 text-->
+        <div class="buttons">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your
+            life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <div class="badges">
+            <a href=""><img src="images/badge-iphone.png" alt="Badge Iphone"></a>
+            <a href=""><img src="images/badge-android.png" alt="Badge Android"> </a>
+          </div>
+
+        </div>
+
+      </section>
+      <!--- END SECTION 2-->
+    </div>
+
+
+    <!-- nav div-->
+    <div class="nav-bar">
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+    </div>
+    </nav>
+
+
+
+  </main>
+
+</body>
+
 </html>
