falta mover boton home

--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link href="./styles/style.css" rel="stylesheet" />
+</head>
+<body>
+    <main class="container">
+        <div class= "block">
+            <div class="phoneSpace">
+                <img class="phone" src="./images/phones.png" alt="phonesImagen">
+            </div>
+            <div class="columna">
+                <div class="logoInsta">
+                    <img src="./images/brand.png" alt="InstaLogo">
+                </div>
+                <div class="home">
+                    <a href="#"></a><img src="./images/home.png" alt="#" />Log in</a>
+                </div>
+                <div class="text">
+                    <h2>Capture and Share the World's Moments</h2>
+                    <p>
+                        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+                        friends and family.
+                    </p>
+                    <p>
+                        Take a picture or video, choose a filter to transform its look and feel,
+                        then post to Instagram it's that easy. You can even share to Facebook,
+                        Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+                    <p>
+                        Oh yeah, did we mention it's free?
+                    </p>
+                    <ul class="appStores">
+                        <li><a href="#"><img class="app" src="./images/badge-iphone.png" alt="ios"></li>
+                        <li><a href="#"><img class="app" src="./images/badge-android.png" alt="android"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li> 
+        <li>API</li> 
+        <li>Jobs</li> 
+        <li>Privacy</li>
+        <li>Terms</li> 
+      </ul>
+        <span class="final">©2014 Instagram</span>
+    </footer>
+</body>
 </html>
