--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel = "stylesheet" href = "styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <div>
+        <img src = "images/phones.png" alt = "phone-photo">
+      </div>
+      <div class = "principalContainer">
+        <div class = "logoInstagramContainer">
+          <div>
+            <img src = "images/brand.png" alt = "logo-instagram">
+          </div>
+          <div class = "loginbutton">
+            <img src="images/home.png" alt = "home">
+            <a class = "login" href="#">Log in</a>
+          </div>
+        </div>
+        <article>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          </article>
+        <div class = "logosAppstoreContainer">
+          <div>
+            <img src="images/badge-iphone.png" alt = "logo-apple">
+          </div>
+          <div>
+            <img src="images/badge-android.png" alt= "logo-android">
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <ul class = "footerLinks">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class = "copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
