--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="instagram">
+      <div id="phone-img"> 
+        <img src = "images/phones.png" alt= "phones"> 
+      </div>
+
+      <div id="second-column">
+        <div id="title-login">
+          <div>
+            <img src = "images/brand.png" alt = "instaLogo">
+          </div>
+          <div id="login">
+            <img src = "images/home.png" alt = "casita">
+            <a href="#" class="login-btn">Log in</a>
+          </div>
+        </div>
+          <div id="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        <div id="iphone-android">
+          <a href ="#"><img src = "images/badge-iphone.png" alt = "imgiphone"></a>
+          <a href ="#"><img src = "images/badge-android.png" alt = "imggoogle"></a>
+        </div>
+      </div>
+  </section>
+
+  <footer>
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li class="copy">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
   </body>
 </html>
