--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!-- <div class="rectangle"></div> -->
+    
+    <div class="header">
+          <section 1 class="main"> 
+              <div class="phones">
+                  <img src="images/phones.png" alt="">
+              </div>
+              <div>
+                <div class="logo-header">
+                    <img src="images/brand.png" alt="" class="logo">
+                    <button class="button">
+                      <img src="images/home.png" alt="">
+                      <span id="login">Log in</span>
+                    </button>
+                </div>
+                <div class="content">
+                              <h2>Instagram Capture and Share <br>the World's Moments</h2>
+                              <p>Instagram is a <strong>fast, beautiful and fun</strong> way to share your life with
+                              <br>and family.</p>
+                              <p>Take a picture or video, choose a filter to transform its look 
+                              <br>and feel, then post to Instagram &mdash; it's that easy. You can 
+                              <br>even share to Facebook, Twitter, Tumblr and more. It's a 
+                              <br>new way to see the world.</p> 
+                              <p>Oh yeah, did we mention it's free?</p>       
+                </div>        
+                <div class="social">
+                              <img src="images/badge-iphone.png" alt="">
+                              <img src="images/badge-android.png" alt="">    
+                </div>
+              </div>
+          </section> 
+          <footer class="footer">
+            <div>
+                <span  class="hell">About us</span>
+                <span  class="hell">Support</span>
+                <span  class="hell">Blog</span>
+                <span  class="hell">Press</span>
+                <span  class="hell">API</span>
+                <span  class="hell">Jobs</span>
+                <span  class="hell">Privacy</span>
+                <span  class="hell">Terms</span>
+                <span  class="hell">@2014 Instagram</span>
+              </div> 
+            </footer>
+        
+  </div>
   </body>
 </html>
