--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="text">
                     <h2>Capture and Share the World's Moments</h2>
                     <p>
-                        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+                        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
                         friends and family.
                     </p>
                     <p>
@@ -43,16 +43,20 @@
     </main>
     <footer>
       <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li> 
-        <li>API</li> 
-        <li>Jobs</li> 
-        <li>Privacy</li>
-        <li>Terms</li> 
+         <li><a href="#">About Us</a></li>
+         <li><a href="#">Support</a></li>
+         <li><a href="#">Blog</a></li>
+         <li><a href="#">Press</a></li>
+         <li><a href="#">API</a></li>
+         <li><a href="#">Jobs</a></li>
+         <li><a href="#">Privacy</a></li>
+         <li><a href="#">Terms</a></li>
+         <li class="final">©2014 Instagram</li>
       </ul>
-        <span class="final">©2014 Instagram</span>
     </footer>
 </body>
 </html>
+
+  
+
+ 
