--- a/index.html
+++ b/index.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <main>
+    <div class="landing-image">
+      <img src="./images/phones.png" alt="" srcset="">
+    </div>
+    <div class="landing-content">
+      <nav class="navbar">
+        <img class="nav-logo" src="./images/brand.png" />
+        <a class="nav-button" href="#">
+          <img class="nav-icon" src="./images/home.png" />
+          <span>Log in</span>
+        </a>
+      </nav>
+      <div class="description">
+        <h1 class="description-title">Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash;it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>TakeOh yeah, did we mention it's free?</p>
+        <div class="landing-buttons">
+          <a href="#">
+            <img src="./images/badge-iphone.png" alt="" srcset="">
+          </a>
+          <a href="#">
+            <img src="./images/badge-android.png" alt="" srcset="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <ul class="footer-links">
+      <li><a class="footer-link" href="">About Us</a></li>
+      <li><a class="footer-link" href="">Support</a></li>
+      <li><a class="footer-link" href="">Blog</a></li>
+      <li><a class="footer-link" href="">Press</a></li>
+      <li><a class="footer-link" href="">API</a></li>
+      <li><a class="footer-link" href="">Jobs</a></li>
+      <li><a class="footer-link" href="">Privacy</a></li>
+      <li><a class="footer-link" href="">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
+
+<!-- 
+Instagram C  
+
+ -->
