--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+    <img class="phones" src="./images/phones.png" alt="phone">
+
+    <div class="right-thingy">
+      <header>
+        <h1> <img src="./images/brand.png" alt="logo"></h1>
+        <div class="homebutton">
+         <img src="./images/home.png" alt="home">
+          <form class="login" action="login">
+            <button type="login"></button>
+        </form> </div>
+      </header>
+
+      <section>
+          <h3>Capture and Share <br>
+            the World's Moments</h3>
+           <article>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>
+               way to share your life with
+          friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+          Oh yeah, did we mention it's free?
+        </article>
+        <img src="./images/badge-iphone.png" alt="ios">
+        <img src="./images/badge-android.png" alt="android">
+    </section>
+    </div>
+  </div>
+  <footer>
+  <ul>
+    <li> <a href="https://about.instagram.com/about-us">About Us</a></li>
+    <li> <a href="https://help.instagram.com/">Support</a></li>
+    <li> <a href="https://about.instagram.com/blog/">Blog</a></li>
+    <li> <a href="https://about.instagram.com/blog">Press</a></li>
+    <li> <a href="https://www.instagram.com/developer/">API</a></li>
+    <li> <a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+    <li> <a href="https://help.instagram.com/519522125107875">Privacy</a></li>
+    <li> <a href="https://help.instagram.com/581066165581870">Terms</a></li>
+    <li class="copyright"> &copy; 2014 Instagram</li>
+  </ul>    
+  </footer> 
   </body>
 </html>
