--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel = "stylesheet" href = "/Users/annaweingart/Desktop/Labs/lab-css-instagram-clone/styles/style.css"/>
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class = "welcome-page">
+    <img src = "images/phones.png" alt = "phones" class = "phones">
+    <div class = "next-to-phones">
+    <div class = "logo-login">
+      <img src = "images/brand.png" alt = "Insta logo">
+      <div class = "login-btn">
+        <img src = "images/home.png" alt = "Home">
+        <a href = "#">Log in</a>
+      </div>
+      </div>
+    <div class = "text-box">
+    <h1>Capture and Share <br>the World's Moments</h1>
+    <p class = "intro-paragraph">
+      Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> with
+      friends and family.
+      <br>
+      <br>
+      Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram
+      &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.
+      <br>
+      <br>
+      Oh yeah, did we mention it's free?
+    </p>
+    <div class = "apple-android-badge">
+      <img src = "images/badge-iphone.png" alt = "iPhone badge">
+      <img src = "images/badge-android.png" alt = "android badge">
+    </div>
+    </div>
+    </div>
+    </div>
+
+
+
+    <nav class = "bottom-nav">
+      <div class = "bottom-nav-links">
+          <a href="#">ABOUT US</a>
+          <a href="#">SUPPORT</a>
+          <a href="#">BLOG</a>
+          <a href="#">PRESS</a>
+          <a href="#">API</a>
+          <a href="#">JOBS</a>
+          <a href="#">PRIVACY</a>
+          <a href="#">TERMS</a>
+      </div>
+      <div class = "copyright">
+          &copy; 2014 INSTAGRAM
+      </div>
+    </nav>
   </body>
 </html>
