--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+</head>
+
+<body>
+
+
+  <div id="mainHolder1">
+    <div id="phoneHolder">
+      <img src="images/phones.png" alt="phones">
+    </div>
+    <div id="loginInfoHolder">
+      <div id="loginHolder">
+        <img src="images/brand.png" alt="">
+        <button id="homeHolder">
+         <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </button>
+      </div>
+      <div id="infoHolder">
+        <div id="hHolder">
+          <h2>Capture and Share the World's Moments</h2>
+        </div>
+        <div id="pHolder">
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+            friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+          
+            Oh yeah, did we mention it's free?<br></p>
+        </div>
+        <div id="storesHolder">
+          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="mainHolder2">
+    <nav>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </nav>
+    <span>&copy; 2014 Instagram</span>
+  </div>
+</body>
+
 </html>
