--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <article class="container">
+      <div class="subcontainer1">
+        <img src="/images/phones.png" alt="phones-img">
+      </div>
+      <div class="subcontainer2">
+        <div class="block1">
+          <img src="/images/brand.png" alt="brand-logo">
+          <button>log in</button>
+        </div>
+        <div class="block2">
+          <h1>Capture and Share the World's Moments</h1>
+          <h3>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.<br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            Oh yeah, did we mention it's free?         
+          </h3>
+        </div>
+        <div class="block3">
+          <img src="/images/badge-iphone.png" alt="badge-iphone">
+          <img src="/images/badge-android.png" alt="badge-android">
+        </div>
+      </div>
+    </article>
+    <footer>
+      <ul>
+        <ul>About Us</ul>
+        <ul>Support</ul>
+        <ul>Blog</ul>
+        <ul>Press</ul>
+        <ul>API</ul>
+        <ul>Jobs</ul>
+        <ul>Privacy</ul>
+        <ul>Terms</ul>
+        <ul>2014 Instagram</ul>
+      </ul>
+    </footer>
   </body>
 </html>
