--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <div class="wrapper">
+    <header class="headerBackground">
+      <div id="Iphones">
+        <img src="/images/phones.png" alt="Phones">
+      </div>
+      <div id="instaLogo">
+        <img src="/images/brand.png" alt="Instagramm Logo">
+      </div>
+      <div id="homeLogo">
+        <img src="/images/home.png" alt="home Logo"> Log in
+      </div>
+      </header>
+      <section id="content">
+        <div id="Text">      
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play    
+       &copy; 
+      </div>
+      <div id="Appstore"></div>
+      <div id="Android"></div>
+      </section>
+      </div>
+    <footer>
+      <ol class="footerList">
+        <li>About Us<li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copyright"> &copy; 2014 INSTAGRAM</li>
+      </ol>
+    </footer>
+    </div>
   </body>
 </html>
