--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="content">
+      <!-- left div with the images -->
+      <div id="phones">
+        <img src="images/phones.png">
+      </div>
+      <!-- right div with the content -->
+      <div>
+        <!-- insta logo and the headers -->
+        <header>
+          <img id = "brand-image" src="images/brand.png">
+          <div id = "home-button">
+            <div>
+              <img src="images/home.png" alt="home">
+              <a href="#"><strong>Log in</strong></a>
+            </div>
+          </div>
+        </header>
+        
+        <!-- all the text  -->
+        <section>
+          <div>
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <br>
+            <!-- buttons to download  -->
+            <div id="get-buttons">
+              <a href="#"><img src="images/badge-iphone.png"></a>
+              <a href="#"><img src="images/badge-android.png"></a>
+            </div>
+        </section>
+      </div>
+    </div>
+
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="insta-2014">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
