--- a/index.html
+++ b/index.html
@@ -4,13 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class= "blue-background"></div>
+    <section id="content">
+    <section class="phones-and-section">
+
+      <section class="phones">
+        <img src= "images/phones.png" alt="phones"/>
+      </section>
+
+      <section class="container">
+        <div class="header">
+          <img src= "images/brand.png"/>
+          <div class="log-in" />
+            <img src="images/home.png" />
+            <a href="#">Log in</a>
+          </div>
+        </div>
+
+        <div   class="description">
+          <div class="description-text">
+            <h1>Instagram Capture and Share the World's Moments</h1>
+
+            <p> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with 
+                friends and family. <br><br> Take a picture or video, choose a filter to transform 
+                its look and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way to see 
+                the world. <br><br>Oh yeah, did we mention it's free?
+            </p>
+          </div>
+
+          <div>
+            <a href="#"><img src="images/badge-iphone.png" alt="app store" /></a>
+            <a href="#"><img src="images/badge-android.png" alt="google play" /></a>
+          </div>
+        </div>
+      </section>
+
+    </section>
+
+    <section class="footer">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <span>&copy; 2014 Instagram</span>
+    </section>
+    </section>
   </body>
 </html>
+
+
+  
