--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
                 <img class="phone" src="./images/phones.png" alt="phonesImagen">
             </div>
             <div class="columna">
-                <div class="logoInsta">
-                    <img src="./images/brand.png" alt="InstaLogo">
-                </div>
-                <div class="home">
-                    <a href="#"></a><img src="./images/home.png" alt="#" />Log in</a>
+                <div class="casita">
+
+                    <div class="logoInsta">
+                        <img src="./images/brand.png" alt="InstaLogo">
+                    </div>
+                    <div class="home">
+                        <a href="#"></a><img src="./images/home.png" alt="#" />Log in</a>
+                    </div>
                 </div>
                 <div class="text">
                     <h2>Capture and Share the World's Moments</h2>
