Create HTML and CSS, not responsive

--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-<link rel="stylesheet" href="styles/style.css">  </head>
-  <body>
-    <section>
-      <div>
-        <img src="images/phones.png" alt="phones">
-      </div>
-      <div class="description">
-        <div class="instaHeader">
-          <img src="images/brand.png" alt="Instagram">
-          <a class="login" href=""><img src="images/home.png" alt="Home_Login">Login</a>
-        </div>
-        <article>
-          <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
-            friends and family.</p>
-            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-            <p>Oh yeah, did we mention it's free?</p>
-        </article>
-        <div class="instaFooter">
-          <img src="images/badge-android.png" alt="Download on the App Store">
-          <img src="images/badge-iphone.png" alt="Get it on Google Play">
-        </div>
-      </div>
-    </section>
-    <footer>
-      <ul> 
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
-      </ul>
-    </footer> 
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Instagram clone by Pauline</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+</head>
+<body>
+  <section class="main reduced-size">
+    <div class="main-sub left">
+      <img src="images/phones.png" alt="phones">
+    </div>
+    <div class="main-sub right">
+      <header class="right-sub">
+        <div class="insta-logo"><img class="insta-logo" src="images/brand.png" alt="Instagram logo"></div>
+        <div class="login">
+        <img src="images/home.png" alt="home">
+        <a class="links" href="#login">Log in</a></div>
+      </header>
+      <article class="right-sub article"> 
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <footer class="right-sub store-logo">
+        <div><img src="images/badge-iphone.png" alt=""></div>
+        <div><img src="images/badge-android.png" alt=""></div>
+      </footer>
+    </div>
+  </section>
+  <footer class="main-footer">
+    <ul class="footer-list">
+      <li><a class="links" href="">About Us</a></li>
+      <li><a class="links" href="">Support</a></li>
+      <li><a class="links" href="">Blog</a></li>
+      <li><a class="links" href="">Press</a></li>
+      <li><a class="links" href="">API</a></li>
+      <li><a class="links" href="">Jobs</a></li>
+      <li><a class="links" href="">Privacy</a></li>
+      <li><a class="links" href="">Terms</a></li>
+      <li>© 2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
 </html>
