--- a/index.html
+++ b/index.html
@@ -3,14 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <!-- About Us Support Blog Press API
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="root-container">
+    <div id="main-page">
+      <div class="phone-img">
+        <img src="images/phones.png" alt="phone-img">
+      </div>
+
+      <div class="presentation">
+
+        <div class="logo-container">
+          <img src="images/brand.png" alt="logo">
+          <div class="button">
+            <img src="images/home.png" alt="log-in">Log In
+          </div>
+        </div>
+
+        <div class="card">
+          <article>
+            <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+          </article>
+          <div>
+            <img src="images/badge-iphone.png" alt="download for iphone">
+            <img src="images/badge-android.png" alt="download for android">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="info">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Term</a>
+      <p>Terms &copy; 2014 Instagram </p>
+    </div>
+  </div>
   </body>
 </html>
